Adding creation of notification
